--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Firebase Form</title>
+    <title>facebook Form</title>
     <link rel="stylesheet" href="style.css">
-    
-    <!-- Meta tags for Facebook -->
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Your Title Here" />
-    <meta property="og:description" content="Your Description Here" />
-    <meta property="og:image" content="https://example.com/image.jpg" />
-
-    <!-- Link to Facebook icon (assuming it's available at this URL) -->
-    <link rel="icon" href="https://example.com/facebook-icon.png">
 </head>
 <body>
     <div class="box">
